@@ -3,10 +3,11 @@
 void DigestBuf::close()
 {
     char *digestbuf = new char[EVP_MAX_MD_SIZE];
-    size_t digestbufLen;
 
     if (pptr() > pbase())
        EVP_DigestUpdate(&d_pimpl->ctx, d_pimpl->buffer, pptr() - pbase());
+
+    unsigned int digestbufLen;
          
     EVP_DigestFinal_ex(&d_pimpl->ctx, 
                     reinterpret_cast<unsigned char *>(digestbuf), 
