@@ -1,3 +1,10 @@
+bobcat (2.04.01)
+
+  * Some OpenSSL functions (HMAC, Digest) needed unsigned 'int *'s. They got
+'size_t *s' causing problems on 64-bit archs (e.g. amd64). Now fixed.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 04 Sep 2009 23:48:22 +0200
+
 bobcat (2.04.00)
 
   * BigInt has been enhanced and extended. Many members have received new 
